feat: payments routes and controllers, swagger config, jest auto tests config
